knowledge/rulesets/football-analysis/1.5.0/00-足球比赛分析基础框架.md
---
schema_version: 3
document_id: football-analysis-framework
document_type: method
title: 足球比赛分析基础框架
rule_version: 1.5.0
reliability: supported
status: active
effective_at: '2026-08-04T14:36:43+08:00'
evidence_level: medium
evidence_snapshot:
  as_of: '2026-08-04T14:36:43+08:00'
  eligible_independent_cases: 0
  support: 0
  counterexample: 0
  ambiguous: 0
  ledger_sha256: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
source_atom_ids:
- doubao-2026-07-28-text-a00049
- doubao-2026-07-28-text-a00375
- doubao-2026-07-28-text-a03721
scenario_type_ids: []
promotion_reviewed_by: null
markets:
- all
phases:
- prematch
- live
- postmatch
tags:
- 总流程
- 门禁
- 分层决策
source_refs:
- kind: local
  locator: knowledge/sources/doubao-2026-07-28/原始学习合集.md
  anchor: 对应 source_atom_ids
- kind: local
  locator: knowledge/validation/frameworks/asian-core-v1.md
  anchor: football-analysis-framework
index: true
---
# 足球比赛分析基础框架

## 目的和适用范围

规定从事实归档到赛后证据追加的唯一顺序，防止先有方向再找理由。

## 术语

- 事实层：可核对且带时间的输入
- 解释层：可被反证的假设
- 结论层：主市场、选择、置信度与 pass

## 必需输入

- 比赛身份与开赛时间
- 带来源的基本面和盘赔快照
- 活动规则集回执
- 场景与历史案例回执

## 数据质量要求

- 所有事实必须记录来源、采集时间和时区；不得用盘口反推不存在的伤停或资金事实。
- 原始盘口、水位和机构文字保留原字符串；无法确认口径时登记冲突。
- 历史案例只有 `prematch_verified` 且时间边界可证明时才可能进入统计。

## 逐步执行过程

1. 核对时间边界和来源
2. 列出缺失、冲突与不可证实信息
3. 建立阶段性实力定位和理论区间
4. 还原实际盘口时序并识别场景
5. 建立双向假设并检索候选案例
6. 分层输出主线、总进球、比分、置信度和 pass 条件

## 判断矩阵

| 条件 | 动作 | 边界 |
|---|---|---|
| 事实完整且市场一致 | 继续推演并保留反证 | 不得提高到确定性 |
| 关键事实缺失 | 先补数据或 pass | 不得用盘口反推伤停 |
| 市场冲突无法解释 | 降低置信度或 pass | 不得任选一个市场覆盖冲突 |

## 双向假设

- 假设 A：当前盘赔变化主要反映可持续的风险重定价。
- 假设 B：当前盘赔变化主要反映市场噪声、热度吸收或短时再平衡。
- 两个假设都必须填写支持证据、反证和锁定前可观察的区分条件。

## 区分触发条件

- 新快照延续同方向且跨机构确认
- 基本面信息与理论盘口同向
- 欧赔、让球与总进球矛盾得到解释

## 跨市场冲突优先级

1. 事实优先于解释
2. 理论定位优先于盘路标签
3. 同市场时序优先于单点水位
4. 主市场优先于比分

## 失效和 Pass 条件

- 无法确认比赛身份或时间
- 只有单一截图且缺少盘向
- 规则回执或案例回执无效
- 主要证据相互冲突且无区分触发条件

满足任一关键失效条件且无法在截止前补齐时，主市场应为 `pass`；不得用降低措辞强度代替 pass。

## 支持案例

- 韩K四场连续跟踪展示了先记录后复盘的价值
- 赫尔辛基复盘推动胜负与让球分离

以上案例只说明规则的适用讨论，不自动计为合格证据。

## 反例

- 赫尔辛基 1-0 证明稳定升盘不能直接等同穿盘
- 罗森博格 4-0 证明诱上解释不能排除大胜

## Source Atom 与声明引用

- source_atom_id: `doubao-2026-07-28-text-a00049`；claim_id: `claim-doubao-2026-07-28-text-a00049`
- source_atom_id: `doubao-2026-07-28-text-a00375`；claim_id: `claim-doubao-2026-07-28-text-a00375`
- source_atom_id: `doubao-2026-07-28-text-a03721`；claim_id: `claim-doubao-2026-07-28-text-a03721`

原子全文通过 `text-inventory.jsonl` 的字节区间回读；对应声明在 `claim-events.jsonl`，冲突结论在 `conflict-events.jsonl`。

## 证据快照

- 当前合格独立案例：0。
- 历史豆包案例统一为 `statistics_eligible: false`。
- 经验规则不得因单场命中晋级；支持、反例、模糊和不适用事件都必须保留。

## 版本变更说明

从简要流程扩展为带规则、场景、案例和证据回执的完整状态机。


## 项目固定权重与执行顺序

- 使用 `asian-core-v1`：亚洲让球 60、欧赔 20、凯利 15、大小球 5。
- 每个维度只可使用 `-1/-0.5/0/0.5/1` 给候选方向评分，综合分为 `Σ(配置权重 × 维度评分)`。
- 缺失维度计零且不重分配权重；同源欧赔与凯利相关时，凯利有效权重减半。
- 固定顺序为：事实/基本面/理论盘预检 → 亚盘 → 欧赔 → 凯利 → 大小球 → 加权合成。
- 先形成胜平负方向，再推导净胜球和两类让球结果；盘口不能反向生成基本面或胜负事实。
- 非 `pass` 输出必须包含胜平负前二、亚洲让球前二、固定让球胜平负前二、总进球区间和恰好两个比分。

## 1.4.0 分层评分与提案约束

- 亚盘用于主要市场观察，欧赔和凯利用于独立验证；凯利不能单独推翻基本面、理论盘口或基础第一顺位。
- 单一赔率、水位或凯利变化不得直接声明机构真实意图，必须保留双向假设和反证。
- 先通过事实、理论盘口和实际市场关系门禁；理论定位缺失、关键事实冲突或未解释背离时必须 pass，不能用评分矩阵替代定位。
- 分析者填写四维多市场离散评分，代码只按 asian-core-v1 计算基础排序、并列和主市场资格，不从盘口原值自动生成方向分数。
- 欧赔与凯利只在共享可核验证据 ID、机构且互相声明相关时降凯利半权；同机构本身不构成相关性。
- 通用实验规则全联赛处置，低稳定性和韩国规则仅作为 profile 叠加；不适用规则必须留下 not_applicable 记录。
- 总进球、比分和结果风险使用候选池，任何触发候选都必须采纳或带反证排除；最终只保留一个总进球区间和两个比分。
- `football-analysis@1.4.0` 仅可通过 `agent start --ruleset football-analysis@1.4.0 --proposal` 离线使用，禁止锁定、结算或影响活动规则。
- 单条实验规则最多移动一个名次，第一顺位换位必须满足独立双规则门禁并记录人工理由。
